# Private-Data-Collection-and-Notification-Management-for-Contact-Tracing-Prototype

./: CMakeLists.txt  Contact_Tracing_Results.txt  LICENSE  README.md  gov.cpp  gov.h  main.cpp  store.cpp  store.h  triple.h  user.cpp  user.h
include/: gov.h  setup.h  triple.h
src/: gov.cpp  main.cpp  setup.cpp  store.cpp  user.cpp
